--- a/cmdpi.html
+++ b/cmdpi.html
@@ -32,17 +32,17 @@
 
     <h3>Diretoria do CMDPI</h3>
     <ul>
-      <strong>Presidente:</strong> Andréia Bazoni Dillen Viale
-      <strong>Vice-Presidente:</strong> Ana Ignês Cereza
-      <strong>Secretária:</strong> Maria Aparecida Ferreira Pimental Pazetto
+       <p><strong>Presidente:</strong> Andréia Bazoni Dillen Viale</p>
+       <p><strong>Vice-Presidente:</strong> Ana Ignês Cereza</p>
+       <p><strong>Secretária:</strong> Maria Aparecida Ferreira Pimental Pazetto</p>
     </ul>
 
     <h3>Contatos</h3>
     <ul>
-      <strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000
+      <p><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</p>
       <p>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</p>
-      <strong>Telefone:</strong> (28) 99949-4027</li>
-      <strong>E-mail:</strong> <a href="mailto:cmdpi.vargemalta@gmail.com">cmdpi.vargemalta@gmail.com</a>
+      <p><strong>Telefone:</strong> (28) 99949-4027</p>
+      <p><strong>E-mail:</strong> <a href="mailto:cmdpi.vargemalta@gmail.com">cmdpi.vargemalta@gmail.com</a></p>
     </ul>
   </section>
 
@@ -85,4 +85,5 @@
 
 </body>
 </html>
+
 
