--- a/cmdca.html
+++ b/cmdca.html
@@ -24,16 +24,16 @@
 
     <h3>Diretoria do CMDCA</h3>
     <ul>
-      <strong>Presidente:</strong> Emerson Cereza Souza
-      <strong>Vice-Presidente:</strong> Ana Ignez Cereza
-      <strong>Secretário:</strong> Samuel Cole Pereira das Neves
+       <p><strong>Presidente:</strong> Emerson Cereza Souza</p>
+       <p><strong>Vice-Presidente:</strong> Ana Ignez Cereza</p>
+       <p><strong>Secretário:</strong> Samuel Cole Pereira das Neves</p>
     </ul>
 
     <h3>Contato</h3>
     <ul>
-      <striong>E-mail: </strong><a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a>
-      <strong>Telefone:</strong> (28) 99986-4027
-      <strong>Endereço:</strong> Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.
+       <p><striong>E-mail: </strong><a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></striong>p
+       <p><strong>Telefone:</strong> (28) 99986-4027</p>
+       <p><strong>Endereço:</strong> Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</p>
     </ul>
   </section>
 
@@ -105,4 +105,5 @@
 
 </body>
 </html>
+
 
