--- a/cmdm.html
+++ b/cmdm.html
@@ -29,16 +29,16 @@
 
     <h3>Diretoria do CMDM</h3>
     <ul>
-      <strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca
-      <strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca
-      <strong>Secretária:</strong> Denise Maria Gomes Moreira
+       <p><strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca</p>
+       <p><strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca</p>
+       <p><strong>Secretária:</strong> Denise Maria Gomes Moreira</p>
     </ul>
 
     <h3>Contato</h3>
     <ul>
-      <strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a>
-      <strong>Telefone:</strong> (28) 99986-4027</li>
-      <strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000
+       <p><strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a></p>
+       <p><strong>Telefone:</strong> (28) 99986-4027</p>
+       <p><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</p>
       <p>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</p>
     </ul>
   </section>
@@ -84,4 +84,5 @@
 
 </body>
 </html>
+
 
