--- a/comades.html
+++ b/comades.html
@@ -25,18 +25,18 @@
     <!-- Diretoria -->
     <h3>Diretoria do COMADES</h3>
     <ul>
-      <strong>Presidente:</strong> Julimar Paiva Ferraz Neves
-      <strong>Vice-Presidente:</strong> Kely Sandra Fardim
-      <strong>Secretário:</strong> Emerson Cereza Souza
+       <p><strong>Presidente:</strong> Julimar Paiva Ferraz Neves</p>
+       <p><strong>Vice-Presidente:</strong> Kely Sandra Fardim</p>
+       <p><strong>Secretário:</strong> Emerson Cereza Souza</p>
     </ul>
     <br>
 
     <!-- Contato -->
     <h3>Contato</h3>
     <ul>
-      <strong>E-mail:</strong> <a href="mailto:comadesva@gmail.com">comadesva@gmail.com</a>
-      <strong>Telefone:</strong> (28) 99986-4027
-      <strong>Endereço:</strong> Av. José João Sartório, 36-16 – Vargem Alta/ES – CEP: 29295-000
+       <p><strong>E-mail:</strong> <a href="mailto:comadesva@gmail.com">comadesva@gmail.com</a></p>
+       <p><strong>Telefone:</strong> (28) 99986-4027</p>
+       <p><strong>Endereço:</strong> Av. José João Sartório, 36-16 – Vargem Alta/ES – CEP: 29295-000</p>
     </ul>
   </section>
 
@@ -114,4 +114,5 @@
 
 </body>
 </html>
+
 
