--- a/cmdca.html
+++ b/cmdca.html
@@ -31,7 +31,7 @@
 
     <h3>Contato</h3>
     <ul>
-       <p><striong>E-mail: </strong><a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></striong>p
+       <p><striong>E-mail: </strong><a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></p>
        <p><strong>Telefone:</strong> (28) 99986-4027</p>
        <p><strong>Endereço:</strong> Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</p>
     </ul>
@@ -105,5 +105,6 @@
 
 </body>
 </html>
+
 
 
