--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
     </li>
     <li>
       <strong>Proteção Social Especial</strong>
-      <ul>
+      </ul>
+        <ol type="I">
         <li>Média Complexidade: <a href="creas.html">CREAS – Centro de Referência Especializado de Assistência Social</a></li>
         <li>Alta Complexidade: <a href="abrigo.html">ABRIGO - Serviços de Acolhimento Institucional</a></li>
-      </ul>
+      </ol>
     </li>
   </ul>
 
@@ -89,3 +90,4 @@
 
 </body>
 </html>
+
