--- a/cras.html
+++ b/cras.html
@@ -22,7 +22,7 @@
 </p>
 
 <p><strong>Responsável:</strong> Tiago Bravin Maralha</p>
-<p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal</p>
+<p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal<a href="https://maps.app.goo.gl/2Z7PJCS4asVb7Kkk7" target="_blank">📍 Clique aqui para ver nossa localização</a></p>
 <p><strong>Telefone:/ WhatsApp:</strong> (28) 99949-4017</p>
 <p><strong>E-mail:</strong> <a href="mailto:crasvargemalta@hotmail.com">crasvargemalta@hotmail.com</a> | <a href="mailto:cras.valta@gmail.com">cras.valta@gmail.com</a></p>
 <p><strong>Horário de Atendimento:</strong> 07h00 às 12h00</p>
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
