--- a/abrigo.html
+++ b/abrigo.html
@@ -52,7 +52,7 @@ A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong
 </div>
 
 <div class="box apadrinhamento">
-  <img alt="apadrinhamento" src="imagem/pda.jpg" class="img-apadrinhamento">img/pda.jpg
+  <img alt="apadrinhamento" src="imagem/pda.jpg" class="img-apadrinhamento">
  
   <p>
   O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
@@ -79,4 +79,5 @@ Clique aqui e saiba mais informações sobre o programa.
 
 
 </strong>
+
 
