--- a/abrigo.html
+++ b/abrigo.html
@@ -32,7 +32,7 @@ Serviço de Acolhimento Institucional que poderá ser desenvolvido nas modalidad
 </ul>
 <br>
 <p>
-<strong> O Serviço Municipal de Acolhimento Institucional, o Abrigo Institucional "Glauber Coelho", Municipal o “Abrigo Institucional Glauber Coelho” tem capacidade para atender 20 crianças e/ou adolescentes.
+<strong> O Serviço Municipal de Acolhimento Institucional, o Abrigo Institucional "Glauber Coelho" tem capacidade para atender 20 crianças e/ou adolescentes.
 A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong>
 </p>
   <ul>
@@ -78,6 +78,7 @@ Clique aqui e saiba mais informações sobre o programa.
 
 
 
-</strong>
+
+
 
 
