--- a/cras.html
+++ b/cras.html
@@ -21,7 +21,7 @@
   O mesmo é a porta de entrada dos usuários à rede socioassistencial de Proteção Básica do SUAS. Os programas, projetos, serviços e benefícios, destinam-se à população em situação de vulnerabilidade social, decorrente de privação ou fragilização de vínculos.
 </p>
 
-<p><strong>Responsável:</strong> Tiago Bravin Maralha</p>
+<p><strong>Responsável:</strong> Tiago Bravim Maralha</p>
 <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal<a href="https://maps.app.goo.gl/2Z7PJCS4asVb7Kkk7" target="_blank">📍 Clique aqui para ver nossa localização</a></p>
 <p><strong>Telefone:/ WhatsApp:</strong> (28) 99949-4017</p>
 <p><strong>E-mail:</strong> <a href="mailto:crasvargemalta@hotmail.com">crasvargemalta@hotmail.com</a> | <a href="mailto:cras.valta@gmail.com">cras.valta@gmail.com</a></p>
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
