--- a/cras.html
+++ b/cras.html
@@ -29,7 +29,7 @@
 
 <h2>Serviços Ofertados no CRAS</h2>
 
-<h2>1. CADASTRO ÚNICO – CAD ÚNICO</h2>
+<h2>1. Cadastro Único – CAD ÚNICO</h2>
 <p>
   É porta de entrada para vários programas sociais como: Bolsa família, Tarifa social de energia elétrica, Minha casa minha vida, entre outros.
   Nele são registradas informações como: características da residência, identificação de cada pessoa, escolaridade, situação de trabalho e renda, entre outras.
@@ -67,7 +67,7 @@
   <li>Registro Administrativo de Nascimento indígena (RANI) ou outros documentos de identificação, como certidão de casamento, RG e Carteira de trabalho.</li>
 </ul>
 
-<h2>2. PROGRAMA CDA – COMPRA DIRETA DA AGRICULTURA FAMILIAR</h2>
+<h2>2. Programa CDA – Compra Direta  da Agricultura Familiar</h2>
 <p>
   Desenvolve ações para garantir o acesso a alimentos saudáveis e de qualidade às famílias em situação de vulnerabilidade social. Por meio da doação de alimentos adquiridos diretamente da agricultura familiar, o programa contribui para a promoção da Segurança Alimentar e Nutricional, assegurando o direito humano à alimentação adequada. As ações são realizadas de forma integrada com a rede socioassistencial, fortalecendo o atendimento às famílias acompanhadas pelos serviços da Assistência Social.
 </p>
@@ -80,7 +80,7 @@
   <li>Famílias que recebem Cestas Verdes por meio dos equipamentos da Assistência Social.</li>
 </ul>
 
-<h2>3. SERVIÇO DE PROTEÇÃO E ATENDIMENTO INTEGRAL À FAMÍLIA – PAIF</h2>
+<h2>3. Serviço de Proteção e Atendimento Integral à Familía – PAIF</h2>
 <p>
   O Serviço de Proteção e Atendimento Integral à Família – PAIF consiste no trabalho social com famílias, de caráter continuado, com a finalidade de fortalecer a função protetiva das famílias, prevenir a ruptura dos seus vínculos, promover seu acesso e usufruto de direitos e contribuir na melhoria de sua qualidade de vida.
   Prevê o desenvolvimento de potencialidades e aquisições das famílias e o fortalecimento de vínculos familiares e comunitários, por meio de ações de caráter preventivo, protetivo e proativo.
@@ -92,7 +92,7 @@
   Famílias em situação de vulnerabilidade social decorrente da pobreza, do precário ou nulo acesso aos serviços públicos, da fragilização de vínculos de pertencimento e sociabilidade e/ou qualquer outra situação de vulnerabilidade e risco social residentes nos territórios de abrangência dos CRAS.
 </p>
 
-<h2>4. SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS</h2>
+<h2>4. Serviço de Convivência e Fortalecimento de Vínculos</h2>
 <p>
   O Serviço de Convivência e Fortalecimento de Vínculos é complementar ao PAIF, institui, na Proteção Básica, serviços de convivência e fortalecimento de vínculos.
   Eles são organizados por faixa etária e têm como objetivo prevenir possíveis situações de risco da população em geral, visando a melhoria da qualidade de vida.
@@ -103,17 +103,17 @@
   Idosos(as) com idade igual ou superior a 60 anos, em situação de vulnerabilidade social, adolescentes e jovens pertencentes às famílias beneficiárias de programas de transferência de renda, crianças encaminhadas pelos serviços da proteção social especial.
 </p>
 
-<h2>5. BPC- BENEFÍCIO DE PRESTAÇÃO CONTINUADA</h2>
+<h2>5. BPC- Benefício de Prestação Continuada</h2>
 <p>
   O Benefício de Prestação Continuada é um benefício da Assistência Social, destinado às pessoas idosas (acima de 65 anos) e pessoas com deficiência que possuem renda por pessoa igual ou inferior a ¼ do salário mínimo. O valor do BPC é um salário mínimo, pago a idosos que não têm renda e às pessoas com deficiência que não podem trabalhar e levar uma vida independente.
 </p>
 
-<h2>6. BENEFÍCIOS EVENTUAIS</h2>
+<h2>6.Benefício Eventuais</h2>
 <p>
   Os Benefícios Eventuais visam o atendimento imediato de necessidades humanas básicas decorrentes de contingências sociais, ou seja, situações inesperadas. Este benefício é ofertado nas situações de nascimento, morte, vulnerabilidade temporária e de calamidade pública.
 </p>
 
-<h2>7. CRIANÇA FELIZ</h2>
+<h2>7. Criança Feliz</h2>
 <p>
   Desenvolve ações para o desenvolvimento integral das crianças na primeira infância, considerando sua família e seu contexto de vida, com a oferta e o acompanhamento de ações intersetoriais das políticas de Assistência Social, Saúde, Justiça, Educação, Cultura e Direitos Humanos. Potencializa as atenções já desenvolvidas pelas políticas de Assistência Social às gestantes, crianças na primeira infância e suas famílias. Avança nas estratégias de apoio à família e de estímulo ao desenvolvimento infantil, elegendo os vínculos familiares e comunitários e o brincar como elementos fundamentais para o desenvolvimento humano.
 </p>
@@ -125,7 +125,7 @@
   Crianças de até 6 (seis) anos afastadas do convívio familiar em razão da aplicação de medida protetiva prevista no Estatuto da Criança e do Adolescente (ECA).
 </p>
 
-<h2>8. CARTEIRA IDOSO</h2>
+<h2>8. Carteira do Idoso</h2>
 <p>
   Permite o acesso gratuito em passagens interestaduais nos transportes rodoviário, ferroviário e aquaviário. Caso não seja por completo, o desconto deve ser de 50%. O documento tem validade de dois anos, mas é possível a renovação.
 </p>
@@ -135,7 +135,7 @@
   Todos os idosos, acima de 65 anos, que tenham renda mensal inferior ou igual a dois salários mínimos. Para ter direito, o cidadão deve ter inscrição do Cadastro Único.
 </p>
 
-<h2>9. A CARTEIRA MUNICIPAL DE IDENTIFICAÇÃO DA PESSOA COM TRANSTORNO DO ESPECTRO AUTISTA (CIMPTEA)</h2>
+<h2>9. CIMPTEA - Carteira Municipal de Identificação da Pessoa com Transtorno do Espectro Autista</h2>
 <p>
   O documento contém informações de identificação da pessoa com Transtorno do Espectro Autista, contato de emergência e, caso tenha, informações de seu representante legal/cuidador para trazer mais segurança e autonomia para os beneficiários do serviço. A Ciptea é um instrumento que visa garantir a atenção integral, o pronto atendimento e a prioridade no atendimento e no acesso aos serviços públicos e privados.
 </p>
@@ -159,7 +159,7 @@
  <li>Assinatura, carimbo e número do CRM do médico responsável;</li>
  </ol>
  
-<h2>10. INCLUIR E MUNDO DO TRABALHO</h2>
+<h2>10. Incluir e Mundo do Trabalho</h2>
 <p>
   Trata-se de uma iniciativa que tem como principal objetivo reduzir a pobreza no Estado do Espírito Santo, com foco na erradicação da extrema pobreza, para que todos os cidadãos aqui residentes tenham acesso aos direitos consolidados na Constituição Federal de 1988. O Programa visa fortalecer as ações do PAIF.
 </p>
@@ -169,7 +169,7 @@
   Famílias em situação de vulnerabilidade social decorrente da pobreza, do precário ou nulo acesso aos serviços públicos, da fragilização de vínculos de pertencimento e sociabilidade e/ou qualquer outra situação de vulnerabilidade e risco social residentes nos territórios de abrangência dos CRAS.
 </p>
 
-<h2>11. PLANTÃO SOCIAL</h2>
+<h2>11. Plantão SocialL</h2>
 <p>
   O plantão social é um meio pelo qual historicamente tem ocorrido a triagem e seleção de demandas para inclusão de atendimentos sociais, aplicado tanto pela organização estatal quanto em ações sociais privadas.
 </p>
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
