--- a/cras.html
+++ b/cras.html
@@ -135,7 +135,7 @@
   Todos os idosos, acima de 65 anos, que tenham renda mensal inferior ou igual a dois salários mínimos. Para ter direito, o cidadão deve ter inscrição do Cadastro Único.
 </p>
 
-<h2>9. CIMPTEA - Carteira Municipal de Identificação da Pessoa com Transtorno do Espectro Autista</h2>
+<h2>9. CMIPTEA - Carteira Municipal de Identificação da Pessoa com Transtorno do Espectro Autista</h2>
 <p>
   O documento contém informações de identificação da pessoa com Transtorno do Espectro Autista, contato de emergência e, caso tenha, informações de seu representante legal/cuidador para trazer mais segurança e autonomia para os beneficiários do serviço. A Ciptea é um instrumento que visa garantir a atenção integral, o pronto atendimento e a prioridade no atendimento e no acesso aos serviços públicos e privados.
 </p>
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
