--- a/cras.html
+++ b/cras.html
@@ -92,7 +92,7 @@
   Famílias em situação de vulnerabilidade social decorrente da pobreza, do precário ou nulo acesso aos serviços públicos, da fragilização de vínculos de pertencimento e sociabilidade e/ou qualquer outra situação de vulnerabilidade e risco social residentes nos territórios de abrangência dos CRAS.
 </p>
 
-<h2>4. Serviço de Convivência e Fortalecimento de Vínculos</h2>
+<h2>4. SCFV- Serviço de Convivência e Fortalecimento de Vínculos</h2>
 <p>
   O Serviço de Convivência e Fortalecimento de Vínculos é complementar ao PAIF, institui, na Proteção Básica, serviços de convivência e fortalecimento de vínculos.
   Eles são organizados por faixa etária e têm como objetivo prevenir possíveis situações de risco da população em geral, visando a melhoria da qualidade de vida.
@@ -169,7 +169,7 @@
   Famílias em situação de vulnerabilidade social decorrente da pobreza, do precário ou nulo acesso aos serviços públicos, da fragilização de vínculos de pertencimento e sociabilidade e/ou qualquer outra situação de vulnerabilidade e risco social residentes nos territórios de abrangência dos CRAS.
 </p>
 
-<h2>11. Plantão SocialL</h2>
+<h2>11. Plantão Social </h2>
 <p>
   O plantão social é um meio pelo qual historicamente tem ocorrido a triagem e seleção de demandas para inclusão de atendimentos sociais, aplicado tanto pela organização estatal quanto em ações sociais privadas.
 </p>
@@ -189,6 +189,7 @@
 </body>
 </html>
 -
+
 
 
 
