--- a/ctuva.html
+++ b/ctuva.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Conselho Tutelar</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -47,4 +47,5 @@
 
 </body>
 </html>
+
 
