--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Secretaria Municipal de Assistência e Desenvolvimento Social</title>
   <link rel="stylesheet" href="styles.css">
+   <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body>
@@ -90,6 +92,7 @@
 
 </body>
 </html>
+
 
 
 
