--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Secretaria de Assistência e Desenvolvimento Social</title>
 <meta name="description" content="Secretário (a):  CAMILA MARIA JUFFU LORENZONI " />
 
@@ -7417,5 +7417,6 @@
 </body>
 
 </html>
+
 
 
