--- a/ctuva.html
+++ b/ctuva.html
@@ -14,7 +14,7 @@
 
 <main>
 <!--sobre o Conselho Tutelar-->
-<section class="box">
+<section class="boxx">
   <h2>Conselho Tutelar - Vargem Alta/ES</h2>
   <p>
   O Conselho Tutelar de Vargem Alta desempenha um papel essencial na proteção dos direitos de crianças e adolescentes no município. Além do expediente regular, o Conselho Tutelar mantém atendimento durante a noite, finais de semana e feriados, por meio dos telefones de plantão. Importante destacar que, em regime de plantão, o atendimento é realizado exclusivamente pelos números de celular. Nos casos de urgência, as conselheiras plantonistas se deslocam até o local da ocorrência para acompanhar de perto a denúncia.
@@ -47,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
