--- a/creas.html
+++ b/creas.html
@@ -14,7 +14,7 @@
 <main>
 
   <!-- Sobre o CREAS -->
-  <section class="box">
+  <section class="boxx">
     <h2>Centro de Referência Especializado de Assistência Social (CREAS) - Vargem Alta/ES</h2>
     <p>
       É uma unidade pública e estatal, que oferta serviços especializados e continuados a famílias e indivíduos em situação de ameaça ou violação de direitos.
@@ -127,5 +127,6 @@
 
 </body>
 </html>
+
 
 
