--- a/cras.html
+++ b/cras.html
@@ -364,7 +364,7 @@
 </p>
 </div>
 
-<a href="semades.html">
+<a href="index.html">
   <button>Voltar</button>
 </a>
 
@@ -7518,3 +7518,4 @@
 </body>
 
 </html>
+
