--- a/cras.html
+++ b/cras.html
@@ -205,7 +205,7 @@
   O mesmo é a porta de entrada dos usuários à rede socioassistencial de Proteção Básica do SUAS. Os programas, projetos, serviços e benefícios, destinam-se à população em situação de vulnerabilidade social, decorrente de privação ou fragilização de vínculos.
 </p>
 
-<p><strong>Responsável:</strong> Tiago Bravin Maralha</p>
+<p><strong>Responsável:</strong> Tiago Bravim Maralha</p>
 <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal</p>
 <p><strong>Telefone:/ WhatsApp:</strong> (28) 99949-4017</p>
 <p><strong>E-mail:</strong> <a href="mailto:crasvargemalta@hotmail.com">crasvargemalta@hotmail.com</a> | <a href="mailto:cras.valta@gmail.com">cras.valta@gmail.com</a></p>
@@ -7518,4 +7518,5 @@
 </body>
 
 </html>
+
 
