--- a/ctuva.html
+++ b/ctuva.html
@@ -221,7 +221,7 @@
   <p><strong>E-mail:</strong> <a href="mailto:conselhocontuva@gmail.com">conselhocontuva@gmail.com</a></p>
 
   <p><strong>Horário de Atendimento:</strong></p>
-  <p>08H às 17H</p>
+  <p>08H00 às 17H00 horas</p>
 
 </div>
 
@@ -7379,9 +7379,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
