--- a/abrigo.html
+++ b/abrigo.html
@@ -197,11 +197,9 @@
     <div class="col-lg-11 col-xs-12">
       <div class="panel panel-primary">
              <div class="panel-heading"> 
-<h3 class="panel-title"> <h3>Conselho Tutelar - Vargem Alta/ES</h3></div>
+<h3 class="panel-title"> <h3>Abrigo Institucional - Vargem Alta/ES</h3></div>
 <div class="panel-body auto-caption editor-texto">
-  <p>
-  <h2>Abrigo Institucional - Vargem Alta/ES</h2>
-<p> 
+  <p> 
 Consiste no acolhimento provisório e excepcional para crianças e adolescentes de ambos os sexos, inclusive crianças e adolescentes com deficiência, sob medida de
 proteção(Art.98 do Estatuto da Criança e do Adolescente) e em situação de risco pessoal e social, cujas famílias ou responsáveis encontrem - se temporariamente 
 impossibilitados de cumprir sua função de cuidado e proteção.
@@ -7412,3 +7410,4 @@ Clique aqui e saiba mais informações sobre o programa.
 
 </html>
   
+
