--- a/abrigo.html
+++ b/abrigo.html
@@ -237,7 +237,7 @@ A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong
 </div>
 
 <div class="box apadrinhamento">
-  <img alt="" src="/img/pda.jpg" class="img-apadrinhamento">
+  <img alt="" src="/img/pda.jpg" class="img-apadrinhamento"> </div>
  
   <p>
   O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
@@ -7410,4 +7410,5 @@ Clique aqui e saiba mais informações sobre o programa.
 
 </html>
   
+
 
