--- a/abrigo.html
+++ b/abrigo.html
@@ -236,8 +236,8 @@ A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong
   <p>Demanda Judicial</p>
 </div>
 
-<div class="box apadrinhamento">
-  <img alt="" src="/img/pda.jpg" class="img-apadrinhamento"> </div>
+<div class="boxapadrinhamento">
+  <img alt="" src="/img/pda.jpg" class="boxapadrinhamento"> </div>
  
   <p>
   O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
@@ -7410,5 +7410,6 @@ Clique aqui e saiba mais informações sobre o programa.
 
 </html>
   
+
 
 
