--- a/abrigo.html
+++ b/abrigo.html
@@ -237,7 +237,8 @@ A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong
 </div>
 
 <div class="boxapadrinhamento">
-  <img alt="" src="/img/pda.jpg" class="boxapadrinhamento"> </div>
+  <img src="img/pda.jpg" alt="">
+</div>
  
   <p>
   O Projeto de Apadrinhamento é uma iniciativa fundamental para minimizar os danos sociais e emocionais enfrentados por muitos jovens de Vargem Alta. 
@@ -7410,6 +7411,7 @@ Clique aqui e saiba mais informações sobre o programa.
 
 </html>
   
+
 
 
 
