--- a/cmdm.html
+++ b/cmdm.html
@@ -201,9 +201,6 @@
 <div class="panel-body auto-caption editor-texto">
     <p>
       Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal dos Direitos da Mulher (CMDM) de Vargem Alta. Aqui você encontra dados sobre a atuação do Conselho, seus membros, formas de contato e documentos importantes.
-    </p>
-
-    <p>
       A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos da mulher.
     </p>
 
@@ -219,13 +216,10 @@
       <li><strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a></li>
       <li><strong>Telefone:</strong> (28) 99986-4027</li>
       <li><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</li>
-      <li>(Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)</li>
+      (Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)
     </ul>
-  
-
-  <!-- Documentos -->
- 
-    <h3>Documentos e Informações Úteis</h3>
+    <!-- Documentos -->
+     <h3>Documentos e Informações Úteis</h3>
     <ul>
       <li>Regimento Interno</li>
       <li>Atas de Reuniões</li>
@@ -234,11 +228,8 @@
       <li>Editais</li>
       <li>Outros documentos relevantes</li>
     </ul>
- 
-
-  <!-- Inscrição -->
- 
-    <h3>Inscrição de Instituições no CMDM</h3>
+   <!-- Inscrição -->
+     <h3>Inscrição de Instituições no CMDM</h3>
     <p>
       Para que uma instituição (ONG, associação ou entidade da sociedade civil) se inscreva e faça parte do Conselho Municipal dos Direitos da Mulher (CMDM), é necessário atender aos requisitos de formalização e aguardar a publicação de Edital de Chamamento Público.
     </p>
@@ -7411,4 +7402,5 @@
 
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9d0fb9f64e3bdffb',t:'MTc3MTYwODU2OQ=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"eb4fee963e654a8bbe8f87f717061aa5","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
+
 
