--- a/cmdm.html
+++ b/cmdm.html
@@ -206,16 +206,16 @@
 
     <h3>Diretoria do CMDM</h3>
     <ul>
-      <li><strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca</li>
-      <li><strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca</li>
-      <li><strong>Secretária:</strong> Denise Maria Gomes Moreira</li>
+      <strong>Presidente:</strong> Lubiana Aparecida Pereira Fonseca
+      <strong>Vice-Presidente:</strong> Neuzeli Farias Fonseca
+      <strong>Secretária:</strong> Denise Maria Gomes Moreira
     </ul>
 
     <h3>Contato</h3>
     <ul>
-      <li><strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a></li>
-      <li><strong>Telefone:</strong> (28) 99986-4027</li>
-      <li><strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000</li>
+      <strong>E-mail:</strong> <a href="mailto:conselhomulherva26@gmail.com">conselhomulherva26@gmail.com</a>
+      <strong>Telefone:</strong> (28) 99986-4027
+      <strong>Endereço:</strong> Avenida José João Sartório, nº 36-16 – Vargem Alta/ES – CEP 29295-000
       (Mesmo endereço da Secretaria Municipal de Assistência e Desenvolvimento Social)
     </ul>
     <!-- Documentos -->
@@ -7402,5 +7402,6 @@
 
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9d0fb9f64e3bdffb',t:'MTc3MTYwODU2OQ=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"eb4fee963e654a8bbe8f87f717061aa5","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
+
 
 
