--- a/cmdca.html
+++ b/cmdca.html
@@ -201,21 +201,22 @@
 <div class="panel-body auto-caption editor-texto">
    
     <p>
-      Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) de Vargem Alta. Aqui você encontra dados sobre a atuação do conselho, seus membros, formas de contato e documentos importantes. A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos de crianças e adolescentes.
+      Este espaço reúne, de forma simples e acessível, as principais informações sobre o Conselho Municipal de Direitos da Criança e do Adolescente (CMDCA) de Vargem Alta. Aqui você encontra dados sobre a atuação do conselho, seus membros, formas de contato e documentos importantes.</p>
+      <p> A proposta é facilitar o acesso às informações e fortalecer a participação da comunidade na garantia dos direitos de crianças e adolescentes.
     </p>
 
     <h3>Diretoria do CMDCA</h3>
     <ul>
-      <li>Presidente: Emerson Cereza Souza</li>
-      <li>Vice-Presidente: Ana Ignez Cereza</li>
-      <li>Secretário: Samuel Cole Pereira das Neves</li>
+      <p><strong>Presidente:</strong> Emerson Cereza Souza</p>
+      <p></p><strong>Vice-Presidente:</strong> Ana Ignez Cereza</p>
+      <p></p><strong>Secretário:</strong> Samuel Cole Pereira das Neves</p>
     </ul>
 
     <h3>Contato</h3>
     <ul>
-      <li>E-mail: <a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></li>
-      <li>Telefone: (28) 99986-4027</li>
-      <li>Endereço: Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000 (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</li>
+      <p><strong>E-mail:</strong> <a href="mailto:comdcavavga@gmail.com">comdcavavga@gmail.com</a></p>
+      <p><strong>Telefone:</strong> (28) 99986-4027</p>
+      <p><strong>Endereço:</strong> Av. José João Sartório, 36-16 - Vargem Alta, ES, 29295-000</p> (O mesmo da Secretaria Municipal de Assistência e Desenvolvimento Social.</li>
     </ul>
  
 
