--- a/abrigo.html
+++ b/abrigo.html
@@ -201,7 +201,7 @@
 <div class="panel-body auto-caption editor-texto">
   <p> 
 Consiste no acolhimento provisório e excepcional para crianças e adolescentes de ambos os sexos, inclusive crianças e adolescentes com deficiência, sob medida de
-proteção(Art.98 do Estatuto da Criança e do Adolescente) e em situação de risco pessoal e social, cujas famílias ou responsáveis encontrem - se temporariamente 
+proteção (Art.98 do Estatuto da Criança e do Adolescente) e em situação de risco pessoal e social, cujas famílias ou responsáveis encontrem - se temporariamente 
 impossibilitados de cumprir sua função de cuidado e proteção.
 A Alta complexidade corresponde ao serviço de acolhimento provisório a pessoas e famílias que estejam em situação de abandono, ameaça ou violação de direitos. 
 De acordo com a Resolução nº 109, de 11 de novembro de 2009, que dispõe sobre a Tipificação Nacional dos Serviços Socioassistenciais, quatro serviços compõem a 
@@ -217,7 +217,7 @@ Serviço de Acolhimento Institucional que poderá ser desenvolvido nas modalidad
 </ul>
 <br>
 <p>
-<strong> O Serviço Municipal de Acolhimento Institucional, o Abrigo Institucional "Glauber Coelho", Municipal o “Abrigo Institucional Glauber Coelho” tem capacidade para atender 20 crianças e/ou adolescentes.
+<strong> O Serviço Municipal de Acolhimento Institucional, o Abrigo Institucional "Glauber Coelho", tem capacidade para atender 20 crianças e/ou adolescentes.
 A Instituição desenvolve diversas atividades, dentre elas destacamos: </strong>
 </p>
   <ul>
@@ -7413,6 +7413,7 @@ Clique aqui e saiba mais informações sobre o programa.
 
 </html>
   
+
 
 
 
