--- a/cras.html
+++ b/cras.html
@@ -207,7 +207,7 @@
 
 <p><strong>Responsável:</strong> Tiago Bravim Maralha</p>
 <p><strong>Endereço:</strong> Avenida José João Sartório, s/nº, ao lado do Ginásio Municipal <a href="https://maps.app.goo.gl/sj2p6g83CeyfXzyh7" target="_blank">
-    Ver no mapa </a></p>
+    📍 Ver no mapa </a></p>
 <p><strong>Telefone:/ WhatsApp:</strong> (28) 99949-4017</p>
 <p><strong>E-mail:</strong> <a href="mailto:crasvargemalta@hotmail.com">crasvargemalta@hotmail.com</a> | <a href="mailto:cras.valta@gmail.com">cras.valta@gmail.com</a></p>
 <p><strong>Horário de Atendimento:</strong> 07h00 às 12h00</p>
@@ -7519,6 +7519,7 @@
 </body>
 
 </html>
+
 
 
 
